src/test/ui/parser/removed-syntax-field-semicolon.stderr
error: struct fields are separated by `,`
  --> $DIR/removed-syntax-field-semicolon.rs:2:12
   |
LL |     bar: ();
   |            ^ help: replace `;` with `,`

error: aborting due to previous error

